# foris-controller-foris-ws

./: .gitlab-ci.yml  CHANGELOG.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: client.html  design.rst
foris_ws/: __init__.py  __main__.py  bus_listener.py  connection.py  websocket_listener.py  ws_handling.py
foris_ws/authentication/: filesystem.py  none.py  ubus.py
tests/: __init__.py  conftest.py  fixtures.py  test_auth_fs.py  test_mqtt.py  test_ubus.py  test_unix_socket.py
